# TypeWriter

./: CMakeLists.txt  README.md  application.qrc
headers/: mainwindow.h
sources/: typeText.txt
src/: main.cpp  mainwindow.cpp
